[package]
name = "hyperliquid_rust_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Official SDK must use underscores
hyperliquid_rust_sdk = "0.5" 
# Indicators library
ta = "0.5" 
chrono = "0.4"
